--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "eslint": "^5.10.0",
-    "express": "^4.16.4",
+    "@types/express": "^4.16.0",
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9",
+    "tslint": "^5.11.0",
     "typescript": "^3.2.2"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.ts"
+    "watch-ts": "tsc -w",
+    "watch-node": "nodemon dist/server.js"
   },
   "author": "yzhbankov",
   "license": "MIT"
